hphp/hack/test/typecheck/casts/object_cast.php
<?hh

function my_example(int $i): void {
  $x = (object)$i;
}
